// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Company component renders correctly 1`] = `
<div>
  <div>
    <p />
    <p />
    <div>
      <div>
        <p>
           not found.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`NavBar component renders correctly 1`] = `
<div>
  <div>
    <nav
      class="navbar navbar-expand-md navbar-light"
    >
      <a
        aria-current="page"
        class="active"
        href="/"
      >
         Jobly 
      </a>
      <ul>
        <div
          class="nav-item"
        >
          <a
            class=""
            href="/companies"
          >
            Companies
          </a>
        </div>
        <div
          class="nav-item"
        >
          <a
            class=""
            href="/jobs"
          >
            Jobs
          </a>
        </div>
        <div
          class="nav-item"
        >
          <a
            class=""
            href="/profile"
          >
             Profile 
          </a>
        </div>
        <div
          class="nav-item"
        >
          <a
            aria-current="page"
            class="active"
            href="/"
          >
             Log out 
            testfirst
             
          </a>
        </div>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Routers component should render correctly 1`] = `
<DocumentFragment>
  <div>
    <div>
      <nav
        class="navbar navbar-expand-md navbar-light"
      >
        <a
          aria-current="page"
          class="active"
          href="/"
        >
           Jobly 
        </a>
        <ul>
          <div
            class="nav-item"
          >
            <a
              class=""
              href="/login"
            >
               Login 
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class=""
              href="/signup"
            >
               Signup 
            </a>
          </div>
        </ul>
      </nav>
    </div>
    <div
      class="Homepage"
    >
      <div
        class="container text-center"
      >
        <h1
          class="mb-4 font-weight-bold"
        >
          Jobly
        </h1>
        <p
          class="lead"
        >
          All the jobs in one, convenient place.
        </p>
        <p>
          <a
            class="btn btn-primary font-weight-bold mr-3"
            href="/login"
          >
            Log in
          </a>
          <a
            class="btn btn-primary font-weight-bold"
            href="/signup"
          >
            Sign up
          </a>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <div>
    <div>
      <nav
        class="navbar navbar-expand-md navbar-light"
      >
        <a
          aria-current="page"
          class="active"
          href="/"
        >
           Jobly 
        </a>
        <ul>
          <div
            class="nav-item"
          >
            <a
              class=""
              href="/login"
            >
               Login 
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class=""
              href="/signup"
            >
               Signup 
            </a>
          </div>
        </ul>
      </nav>
    </div>
    <div
      class="Homepage"
    >
      <div
        class="container text-center"
      >
        <h1
          class="mb-4 font-weight-bold"
        >
          Jobly
        </h1>
        <p
          class="lead"
        >
          All the jobs in one, convenient place.
        </p>
        <p>
          <a
            class="btn btn-primary font-weight-bold mr-3"
            href="/login"
          >
            Log in
          </a>
          <a
            class="btn btn-primary font-weight-bold"
            href="/signup"
          >
            Sign up
          </a>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
